--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "TheNetwork",
   "version": "0.0.1",
   "scripts": {
-    "start": "node ./server/server"
+    "start": "node server"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
